# R2Uploader

./: .gitignore  README.md  build-macos.sh  bun.lockb  bunfig.toml  help-cn.md  help.md  package.json  svelte.config.js  vite.config.js
.github/workflows/: release-tauri.yaml
backup/: AndroidManifest.xml  build.gradle.kts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icon/: Icon.icns
src-tauri/src/: lib.rs  main.rs  manager.rs  r2.rs  typ.rs
src/lib/: db.ts  i18n.svelte.ts  store.svelte.ts  tools.ts  type.ts
src/lib/components/: AddBucket.svelte  AddTextContent.svelte  Alert.svelte  BucketSelector.svelte  FileDrag.svelte  FileUploader.svelte  FileUploaderPreview.svelte  FileUploaderProgress.svelte  FileUploaderReady.svelte  FileUploaderRoot.svelte  Modal.svelte  Sidebar.svelte  TrialStatus.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/activate/: +page.svelte
src/routes/setting/: +page.svelte
src/routes/transfer/: +page.svelte
