[package]
name = "r2uploader"
version = "1.0.3"
description = "Upload Files to Cloudflare R2"
authors = ["ZeroRust"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "r2uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.20.2"
dashmap = "6.1.0"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
mime_guess = "2.0.5"
sysproxy = "0.3.0"
tokio-util = "0.7.13"
uuid = "1.11.0"
base64 = "0.22"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.69", features = ["behavior-version-latest"] }
aws-smithy-runtime = "1.7.6"
hyper-proxy = { version = "0.9.1", default-features = false, features = [
    "rustls",
] }
hyper = { version = "0.14", features = ["client"] }
futures = "0.3.31"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-clipboard = "2.1.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
